--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <footer>
 
       <ul class="social-links">
-        <li class="socials--hover"><ion-icon name="logo-facebook"></ion-icon></li>
-        <li class="socials--hover"><ion-icon name="logo-twitter"></ion-icon></li>
-        <li class="socials--hover"><ion-icon name="logo-instagram"></ion-icon></li>
+        <li class="socials--hover"><a href="facebook.com" class="socials--hover"><ion-icon name="logo-facebook"></ion-icon></a></li>
+        <li class="socials--hover"><a href="twitter.com" class="socials--hover"><ion-icon name="logo-twitter"></ion-icon></a></ion-icon></li>
+        <li class="socials--hover"><a href="instagram.com" class="socials--hover"><ion-icon name="logo-instagram"></ion-icon></a></ion-icon></li>
       </ul>
 
       <p class="attribution">
